--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -20,6 +20,7 @@
       margin-bottom: rem(10);
       text-transform: uppercase;
       font-family: $heading-font-family;
+      padding-right: rem(30);
     }
   }
 
