--- a/app/scripts/components/DatasetList/dataset-list-style.scss
+++ b/app/scripts/components/DatasetList/dataset-list-style.scss
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    padding: 0;
 
     li {
       background: #f1f1f1;
