--- a/app/scripts/components/Modal/modal-style.scss
+++ b/app/scripts/components/Modal/modal-style.scss
@@ -1,9 +1,9 @@
 // Import global variables
 @import '../../../styles/variables';
 
-.modal-open {
-  overflow: hidden;
-}
+// .modal-open {
+//   overflow: hidden;
+// }
 
 .c-modal {
   position: fixed;
