--- a/app/scripts/components/Console/console-style.scss
+++ b/app/scripts/components/Console/console-style.scss
@@ -91,10 +91,14 @@
     width: 100%;
     min-height: 45vh;
     background-color: $theme-alternative;
-    border-radius: 2px 10px 10px 10px;
+    border-radius: 10px;
     padding: $small-margin;
     z-index: 3;
     position: relative;
+
+    &.has-tabs {
+      border-radius: 2px 10px 10px 10px;
+    }
 
     .tab-bar {
       margin-bottom: $small-margin;
