fix button on home page

--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -50,7 +50,7 @@
 
       <div class="-center column small-6 medium-4">
         <div class="c-button-group -center">
-          <button-component class="-bordered -big" :click="goToPlayground">Start</button-component>
+          <button-component class="-bordered -big -white" :click="goToPlayground">Start</button-component>
         </div>
       </div>
 
