--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -29,6 +29,10 @@
       border-top: solid 1px rgba($black, 0.1);
       z-index: 1000;
 
+      a {
+        color: rgba(34, 34, 34, 0.6);
+      }
+
       .header-wrapper {
         justify-content: flex-end;
         height: 50px;
