add login to nav

--- a/app/scripts/components/Header/header-style.scss
+++ b/app/scripts/components/Header/header-style.scss
@@ -110,4 +110,12 @@
       }
     }
   }
+
+  .login {
+    margin-left: rem(35);
+    svg {
+      height: 15px;
+      width: 15px;
+    }
+  }
 }
