--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -23,6 +23,10 @@
               <router-link active-class="-active" tag="li" to="/about" exact>
                 <a>About Us</a>
               </router-link>
+
+              <a href="https://api.apihighways.org/auth/login" class="login" target="_blank" rel="noopener nofollower">
+                <icon-component name="icon-user" class="-xsmall"></icon-component>
+              </a>
             </ul>
           </nav>
         </div>
