--- a/app/scripts/components/Playground/playground-style.scss
+++ b/app/scripts/components/Playground/playground-style.scss
@@ -12,6 +12,7 @@
     font-size: rem(40);
     font-family: $heading-font-family;
     margin-top: 0;
+    text-align: center;
   }
 
   .data-sets {
