--- a/app/scripts/components/Playground/playground-style.scss
+++ b/app/scripts/components/Playground/playground-style.scss
@@ -4,6 +4,7 @@
 .c-playground {
   background-color: $theme-blue;
   padding-top: rem(80);
+  padding-bottom: rem(50);
 
   h2 {
     color: $white;
