--- a/app/scripts/components/Spinner/spinner-template.html
+++ b/app/scripts/components/Spinner/spinner-template.html
@@ -2,7 +2,9 @@
   <div class="c-overlay" v-if="overlay"></div>
   <div class="spinner" v-if="loading">
     <div class="spinner-container">
-      <div class="spinner-content"></div>
+      <div class="spinner-content">
+        <icon-component name="icon-loader" class="-large"></icon-component>
+      </div>
     </div>
   </div>
 </div>
