Add link to documentation page

--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -20,6 +20,10 @@
                 <a>Examples</a>
               </router-link>
 
+              <li class="">
+                <a href="https://doc.apihighways.org/" target="_blank" rel="noopener nofollower">Documentation</a>
+              </li>
+
               <router-link active-class="-active" tag="li" to="/about" exact>
                 <a>About Us</a>
               </router-link>
@@ -42,8 +46,8 @@
               <router-link active-class="-active" tag="li" to="/examples/conflicts-related-to-protected-areas" exact>
                 <a>Conflicts related to protected areas</a>
               </router-link>
-              <router-link active-class="-active" tag="li" to="/examples/regions-with-greatests-water-risks" exact>
-                <a>Regions with greatests water risks</a>
+              <router-link active-class="-active" tag="li" to="/examples/regions-with-greatest-water-risks" exact>
+                <a>Regions with greatest water risks</a>
               </router-link>
             </ul>
           </nav>
