fixes for firefox css

--- a/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-style.scss
+++ b/app/scripts/components/OtherVisualization/ToggleMenu/toggle-menu-style.scss
@@ -125,6 +125,7 @@
       width: 100%;
       padding: rem(10) rem(60) rem(10) rem(40);
       position: absolute;
+      left: 0;
       top: rem(76);
       bottom: 0;
       overflow-y: scroll;
