--- a/app/scripts/components/Hero/hero-template.html
+++ b/app/scripts/components/Hero/hero-template.html
@@ -17,4 +17,10 @@
     </div>
   </div>
 
+  <div v-if="location.partners">
+    <div class="hero-app-content">
+      <h1>Partner APIs</h1>
+    </div>
+  </div>
+
 </div>
