styles for table

--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -16,6 +16,10 @@
                 <a>Data sets</a>
               </router-link>
 
+              <router-link active-class="-active" tag="li" to="/partner-apis">
+                <a>Partner APIs</a>
+              </router-link>
+
               <router-link active-class="-active" tag="li" to="/examples/">
                 <a>Examples</a>
               </router-link>
