--- a/app/scripts/components/Table/table-style.scss
+++ b/app/scripts/components/Table/table-style.scss
@@ -47,6 +47,7 @@
     font-weight: 600;
     font-size: rem(14);
     text-transform: capitalize;
+    color: $black;
 
     > div {
       padding-bottom: 5px;
