--- a/app/scripts/components/Table/table-template.html
+++ b/app/scripts/components/Table/table-template.html
@@ -1,7 +1,7 @@
 <div class="c-table">
   <div class="t-row header">
     <div class="col-row" v-for="(col, index) in cols">
-        {{ col }}
+        {{ col.label }}
     </div>
   </div>
   <div class="t-row body" v-for="(item, index) in data">
