Multiple small fixes on texts, images and filtering out unpublished datasets

--- a/app/scripts/components/Console/console-template.html
+++ b/app/scripts/components/Console/console-template.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div v-if="dataSourceUrl" class="data-link">
-      <a :href="dataSourceUrl">
+      <a :href="dataSourceUrl" target="_blank">
         <icon-component name="icon-link" class="-small"></icon-component>
         See data source
       </a>
