--- a/app/scripts/components/Home/home-template.html
+++ b/app/scripts/components/Home/home-template.html
@@ -1,124 +1,134 @@
-<div class="c-home">
-  <article-component class="about-us">
-    <h1>About API Highways</h1>
+<div class="c-home" >
+  <article-component class="about-us" >
+    <h1 >About API Highways</h1 >
 
-    <div class="row expanded">
+    <div class="row expanded" >
 
-      <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large" name="icon-hub"></icon-component>
-        <div class="info-column-text">
-          <h3>Developer-friendly, application-ready</h3>
-          <p>We bring high-value data sets and APIs from government, NGO, and private sector organizations into a single infrastructure. This gives developers familiar and standardized APIs and tools to create visualizations and applications on top of SDG-related data.</p>
-        </div>
-      </div>
+      <div class="column small-12 medium-6 info-column" >
+        <icon-component class="-round -large" name="icon-hub" ></icon-component >
+        <div class="info-column-text" >
+          <h3 >Developer-friendly, application-ready</h3 >
+          <p >We bring high-value data sets and APIs from government, NGO, and private sector organizations into a
+            single infrastructure. This gives developers familiar and standardized APIs and tools to create
+            visualizations and applications on top of SDG-related data.</p >
+        </div >
+      </div >
 
-      <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large" name="icon-community"></icon-component>
-        <div class="info-column-text">
-          <h3>An open source developer community</h3>
-          <p>
-            All API Highways software infrastructure is comprehensively documented and <b>100% open source</b>. We are a community of developers, data enthusiasts, and international development experts building an ecosystem of shared methodologies and open source code.
-          </p>
-        </div>
-      </div>
+      <div class="column small-12 medium-6 info-column" >
+        <icon-component class="-round -large" name="icon-community" ></icon-component >
+        <div class="info-column-text" >
+          <h3 >An open source developer community</h3 >
+          <p >
+            All API Highways software infrastructure is comprehensively documented and <b >100% open source</b >. We are
+            a community of developers, data enthusiasts, and international development experts building an ecosystem of
+            shared methodologies and open source code.
+          </p >
+        </div >
+      </div >
 
-      <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large" name="icon-laptop"></icon-component>
-        <div class="info-column-text">
-        <h3>Data discoverability</h3>
-        <p>We are growing a network of machine-readable, application-ready API-enabled data from a wealth of government, private, and NGO sources. All data is easily searchable and contextually linked using our Knowledge Graph.</p>
-        </div>
-      </div>
+      <div class="column small-12 medium-6 info-column" >
+        <icon-component class="-round -large" name="icon-laptop" ></icon-component >
+        <div class="info-column-text" >
+          <h3 >Data discoverability</h3 >
+          <p >We are growing a network of machine-readable, application-ready API-enabled data from a wealth of
+            government, private, and NGO sources. All data is easily searchable and contextually linked using our
+            Knowledge Graph.</p >
+        </div >
+      </div >
 
-      <div class="column small-12 medium-6 info-column">
-        <icon-component class="-round -large" name="icon-settings"></icon-component>
-        <div class="info-column-text">
-        <h3>Use case development</h3>
-        <p>Through a “network of networks” approach, API Highways seeks to make your data more accessible, facilitate code-sharing and community development, and re-purpose projects across new regions and contexts.</p>
-        </div>
-      </div>
-    </div>
+      <div class="column small-12 medium-6 info-column" >
+        <icon-component class="-round -large" name="icon-settings" ></icon-component >
+        <div class="info-column-text" >
+          <h3 >Use case development</h3 >
+          <p >Through a “network of networks” approach, API Highways seeks to make your data more accessible, facilitate
+            code-sharing and community development, and re-purpose projects across new regions and contexts.</p >
+        </div >
+      </div >
+    </div >
 
-  </article-component>
+  </article-component >
 
-  <article-component class="-accent">
-    <div class="row">
+  <article-component class="-accent" >
+    <div class="row" >
 
-      <div class="column small-6 medium-8 align-middle">
-        <h3 class="-light">Start collecting, visualising & monitoring data the right way.</h3>
-      </div>
+      <div class="column small-6 medium-8 align-middle" >
+        <h3 class="-light" >Start collecting, visualising & monitoring data the right way.</h3 >
+      </div >
 
-      <div class="-center column small-6 medium-4">
-        <div class="c-button-group -center">
-          <button-component class="-bordered -big -white" :click="goToPlayground">Start</button-component>
-        </div>
-      </div>
+      <div class="-center column small-6 medium-4" >
+        <div class="c-button-group -center" >
+          <button-component class="-bordered -big -white" :click="goToPlayground" >Start</button-component >
+        </div >
+      </div >
 
 
-    </div>
-  </article-component>
+    </div >
+  </article-component >
 
-  <article-component class="-alternative -no-padding" grid-row="row expanded" :grid-column="false">
+  <article-component class="-alternative -no-padding" grid-row="row expanded" :grid-column="false" >
 
-      <div class="column small-12 medium-6 split-view">
-        <div class="link-column row">
-          <div class="column small-10 large-7 large-offset-1">
-            <h1 class="-clean -left">Playbook</h1>
-            <p class="-clean">
-              Learn how to turn your SDG data into data services and
-              make it available to millions of software developers.
-            </p>
-            <a href="https://gpsdd.github.io/playbook/" rel="noopener noreferrer" target="_blank" class="link-column-action">Read Playbook</a>
-          </div>
-        </div>
-      </div>
+    <div class="column small-12 medium-6 split-view" >
+      <div class="link-column row" >
+        <div class="column small-10 large-7 large-offset-1" >
+          <h1 class="-clean -left" >Playbook</h1 >
+          <p class="-clean" >
+            Learn how to turn your SDG data into data services and
+            make it available to millions of software developers.
+          </p >
+          <a href="https://gpsdd.github.io/playbook/" rel="noopener noreferrer" target="_blank"
+             class="link-column-action" >Read Playbook</a >
+        </div >
+      </div >
+    </div >
 
-      <div class="column small-12 medium-6 split-view">
-        <div class="link-column row">
-          <div class="column small-10 large-7">
-            <h1 class="-clean -left">shared, open software</h1>
-            <p class="-clean">
-              All software used in the making of the developer playground is open source
-              and available online. Take a look and if you want, contribute!
-            </p>
-            <a href="https://github.com/Vizzuality/DATA4SDGS-Highway" rel="noopener noreferrer" target="_blank" class="link-column-action">Source Code</a>
-          </div>
-        </div>
-      </div>
+    <div class="column small-12 medium-6 split-view" >
+      <div class="link-column row" >
+        <div class="column small-10 large-7" >
+          <h1 class="-clean -left" >shared, open software</h1 >
+          <p class="-clean" >
+            All software used in the making of the developer playground is open source
+            and available online. Take a look and if you want, contribute!
+          </p >
+          <a href="https://github.com/GPSDD" rel="noopener noreferrer" target="_blank" class="link-column-action" >Source
+            Code</a >
+        </div >
+      </div >
+    </div >
 
-  </article-component>
+  </article-component >
 
-  <article-component class="twitter-slider">
-    <h3 class="-center">What our champions have to say</h3>
-    <slider-component>
-      <div v-for="tweet in twitterSlides">
-        <div class="tweet">
-          <p class="tweet-message">{{tweet.text}}</p>
-          <div class="tweet-user">
-            <span class="tweet-user-tag">Twitter user:</span>
-            <a class="tweet-username" :href="tweet.url">@{{tweet.user}}</a>
-          </div>
-        </div>
-      </div>
-    </slider-component>
-    <div v-show="!tweetsAvailable" class="tweet">
-      <div class="no-tweets">
-        <icon-component name="icon-twitter" class="-small -alternative"></icon-component>
-        <p>No tweets available</p>
-      </div>
-    </div>
-  </article-component>
+  <article-component class="twitter-slider" >
+    <h3 class="-center" >What our Partners have to say</h3 >
+    <slider-component >
+      <div v-for="tweet in twitterSlides" >
+        <div class="tweet" >
+          <p class="tweet-message" >{{tweet.text}}</p >
+          <div class="tweet-user" >
+            <span class="tweet-user-tag" >Twitter user:</span >
+            <a class="tweet-username" :href="tweet.url" >@{{tweet.user}}</a >
+          </div >
+        </div >
+      </div >
+    </slider-component >
+    <div v-show="!tweetsAvailable" class="tweet" >
+      <div class="no-tweets" >
+        <icon-component name="icon-twitter" class="-small -alternative" ></icon-component >
+        <p >No tweets available</p >
+      </div >
+    </div >
+  </article-component >
 
-  <article-component class="-accent -no-padding" v-if="showFeedback">
-    <feedback-component></feedback-component>
-  </article-component>
+  <article-component class="-accent -no-padding" v-if="showFeedback" >
+    <feedback-component ></feedback-component >
+  </article-component >
 
-  <article-component class="-complementary">
-    <h1>Data Champions</h1>
-    <h4 class="-light -center desc">
-      80+ Champions globally representing the full range of data producers and users working to
-      harness the data revolution for sustainable development.
-    </h4>
-    <partners-carousel></partners-carousel>
-  </article-component>
-</div>
+  <article-component class="-complementary" >
+    <h1 >The Global Partnership Network</h1 >
+    <h4 class="-light -center desc" >
+      The Global Partnership is a growing network of more than 300 members. Our vision is a world where the
+      opportunities of the data revolution are available to and for all of humanity, as a force for improving life for
+      all people, everywhere.
+    </h4 >
+    <partners-carousel ></partners-carousel >
+  </article-component >
+</div >
