generate token from the api

--- a/app/scripts/components/Header/header-template.html
+++ b/app/scripts/components/Header/header-template.html
@@ -28,7 +28,7 @@
                 <a>About Us</a>
               </router-link>
 
-              <a href="https://api.apihighways.org/auth/login" class="login" target="_blank" rel="noopener nofollower">
+              <a :href="loginLink" class="login">
                 <icon-component name="icon-user" class="-xsmall"></icon-component>
               </a>
             </ul>
