Updated homepage partner logo list

--- a/app/scripts/components/PartnersCarousel/template.html
+++ b/app/scripts/components/PartnersCarousel/template.html
@@ -1,19 +1,19 @@
 <section class="c-partners-carousel">
   <slider-component :options="{ perPage: 4 }">
-    <div><img src="/static/partners/ACTS_LOGO.png" alt="ACTS"></div>
-    <div><img src="/static/partners/Abia-state-Governor_LOGO.png" alt="Abia State Governor"></div>
-    <div><img src="/static/partners/africa_gathering_LOGO.png" alt="Africa Gathering"></div>
-    <div><img src="/static/partners/Africa_LOGO.png" alt="Africa"></div>
-    <div><img src="/static/partners/african-monitor_LOGO.png" alt="African Monitor"></div>
-    <div><img src="/static/partners/africas-voices_LOGO.png" alt="Africas Voices"></div>
-    <div><img src="/static/partners/Agora_LOGO.png" alt="Agora"></div>
-    <div><img src="/static/partners/aiddata-white_LOGO.png" alt="Aiddata"></div>
-    <div><img src="/static/partners/barclays_LOGO.png" alt="Barclays"></div>
-    <div><img src="/static/partners/Bigdataforafrica_LOGO.png" alt="Big Data for Africa"></div>
-    <div><img src="/static/partners/BIID_LOGO.png" alt="BIID"></div>
-    <div><img src="/static/partners/Bop_LOGO.png" alt="Bop"></div>
-    <div><img src="/static/partners/bw-web_LOGO.png" alt="BW Web"></div>
-    <div><img src="/static/partners/CCB_LOGO.png" alt="CCB"></div>
-    <div><img src="/static/partners/Flag_of_Canada-LOGO.png" alt="Canada"></div>
+    <div><a href="http://www.worldbank.org/" target="_blank"><img src="/static/partners_new/world_bank_logo.gif" alt="World Bank Group"></a></div>
+    <div><a href="http://resourcewatch.org/" target="_blank"><img src="/static/partners_new/resource_watch.png" alt="Resource Watch"></a></div>
+    <div><a href="http://www.earthobservations.org/" target="_blank"><img src="/static/partners_new/GEO_logo_with_alternative_layout.png" alt="Group on Earth Observations"></a></div>
+    <div><a href="https://carto.com/" target="_blank"><img src="/static/partners_new/carto.jpg" alt="CARTO"></a></div>
+    <div><a href="https://unstats.un.org/" target="_blank"><img src="/static/partners_new/logo_StatisticsDivision.png" alt="United Nations Statistics Division"></a></div>
+    <div><a href="http://www.ciesin.org/" target="_blank"><img src="/static/partners_new/logo_ciesin.jpg" alt="CIESIN"></a></div>
+    <div><a href="https://data.world/" target="_blank"><img src="/static/partners_new/data_world.png" alt="Data.World"></a></div>
+    <div><a href="https://codeforsierraleone.org" target="_blank"><img src="/static/partners_new/CfSLEONE-Branding-Logo.png" alt="Code for Sierra Leone"></a></div>
+    <div><a href="https://radiant.earth/" target="_blank"><img src="/static/partners_new/Radiant_Earth_Logo.jpg" alt="Radiant.Earth"></a></div>
+    <div><a href="https://www.hotosm.org/" target="_blank"><img src="/static/partners_new/hotosm.png" alt="Humanitarian OpenStreetMap Team"></a></div>
+    <div><a href="https://earthengine.google.com/" target="_blank"><img src="/static/partners_new/gee.png" alt="Google Earth Engine"></a></div>
+    <div><a href="https://aws.amazon.com/" target="_blank"><img src="/static/partners_new/aws.png" alt="Amazon Web Services"></a></div>
+    <div><a href="http://www.vizzuality.com/" target="_blank"><img src="/static/partners_new/vizzuality.png" alt="Vizzuality"></a></div>
+    <div><a href="https://www.mapbox.com/" target="_blank"><img src="/static/partners_new/mapbox.png" alt="Mapbox"></a></div>
+    <div><a href="https://www.esri.com/" target="_blank"><img src="/static/partners_new/esri.jpeg" alt="ESRI"></a></div>
   </slider-component>
 </section>
