Show description on dataset view page

--- a/app/scripts/components/Console/console-style.scss
+++ b/app/scripts/components/Console/console-style.scss
@@ -31,6 +31,10 @@
     }
   }
 
+  .ds-description {
+    margin-bottom: rem(20);
+  }
+
   .tab-panel {
     display: flex;
     justify-content: flex-start;
