--- a/app/scripts/components/Dataset/dataset-style.scss
+++ b/app/scripts/components/Dataset/dataset-style.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   min-height: rem(200);
 
-  &.modal-dataset {
+  &.dataset-detail {
     padding: 0;
     justify-content: flex-start;
     min-height: 0;
