--- a/app/scripts/components/Examples/examples-style.scss
+++ b/app/scripts/components/Examples/examples-style.scss
@@ -1,124 +1,69 @@
 // Import global variables
 @import '../../../styles/variables';
 
-.c-home {
+.c-examples {
+  margin: 50px 0 150px;
 
-  .info-column {
-    display: flex;
-    flex-direction: column;
-    margin-top: rem(30);
-    margin-bottom: rem(30);
-
-    .info-column-text {
-      margin-top: $small-margin;
-
-      h3 {
-        margin-bottom: $small-margin;
-      }
-    }
+  .examples-list {
+    list-style: none;
+    padding: 0;
   }
 
-  .split-view {
+  .example-card {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
+    border: solid 1px rgba(135, 146, 154, 0.2);
+    margin-bottom: 60px;
 
-    &:before {
-      content: "";
+    &:after {
+      content: '';
       position: absolute;
       top: 0;
       right: 0;
+      bottom :0;
       left: 0;
-      bottom: 0;
-      background-color: rgba($theme-blue, 0.2);
+      opacity: 0;
+      box-shadow: 0 30px 20px 0 rgba(0,0,0,0.10);
+      transition: opacity 0.3s ease-in-out;
     }
 
-    &:first-child {
-      background-image: url('/static/layouts/laptop.jpg');
-      background-repeat: no-repeat;
+    &:hover:after {
+      opacity: 1;
+    }
+
+    &-thumbnail {
+      height: 190px;
       background-size: cover;
-      min-height: 532px;
     }
 
-    &:last-child {
-      background-image: url('/static/layouts/lights.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      min-height: 532px;
-
-      border: 1px solid $theme-alternative;
-      border-left: 0;
-    }
-  }
-
-  .link-column {
-    height: 30%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding-left: $medium-margin * 2;
-    z-index: 2;
-
-    .link-column-action {
-      &:after {
-        position: relative;
-        display: inline-block;
-        content: '';
-        width: 9px;
-        height: 9px;
-        margin-left: $small-margin;
-        transform: rotate(45deg);
-        border: 2px solid transparent;
-        border-top: 2px solid $gold-yellow;
-        border-right: 2px solid $gold-yellow;
-
-      }
+    &-title {
+      margin: 15px;
+      font-size: rem(24);
+      font-weight: normal;
+      line-height: 0.92;
+      letter-spacing: 1.6px;
+      color: $base-font-color;
     }
 
-    @media (min-width: 640px) and (max-width: 726px) {
-      height: 60%;
+
+    &-content {
+      margin: 12px 15px;
+      font-size: $font-size-xsmall;
+      font-weight: normal;
+      line-height: 1.43;
+      letter-spacing: normal;
+      color: $base-font-color-light;
+    }
+
+    &-details {
+      float: right;
+      margin: 15px;
+      font-size: $font-size-small;
+      font-weight: normal;
+      line-height: 1.5;
+      letter-spacing: 1px;
+      text-align: right;
+      color: $link-font-color;
     }
   }
-
-  .twitter-slider {
-    .tweet {
-
-      > .tweet-message {
-        margin-top: $small-margin;
-        margin-bottom: 0;
-        font-style: italic;
-        font-size: $font-size-small;
-        text-align: center;
-      }
-
-      > .tweet-user {
-        display: flex;
-        align-items: baseline;
-        justify-content: center;
-
-        > .tweet-user-tag {
-          font-weight: $font-weight-bold;
-          font-size: $font-size-xsmall;
-        }
-
-        > .tweet-username {
-          margin-left: $small-margin / 3;
-          text-transform: lowercase;
-          color: $theme-blue;
-        }
-      }
-    }
-  }
-
-  .no-tweets {
-    margin-top: $medium-margin;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
 }
