--- a/app/scripts/components/Examples/examples-template.html
+++ b/app/scripts/components/Examples/examples-template.html
@@ -1,12 +1,16 @@
 <div class="c-examples">
-  <div>
-    <ul>
-      <li class="column small-12 medium-6 large-4 featured-list-item" v-for="example in examples" :key="example.id" >
-        <a href="#" @click="goToDetail(example.id)">
-          <h2>{{example.title}}</h2>
-          <img :src="example.thumbnail" alt="Example thumbnail">
-        </a>
-      </li>
-    </ul>
-  </div>
+  <ul class="row examples-list">
+    <router-link v-for="example in examples" tag="li" :to="'/examples/' + example.id" class="column small-12 medium-6 large-4" :key="example.id">
+      <a class="example-card">
+        <div class="example-card-thumbnail" :style="'background-image: url(' + example.thumbnail +')'"></div>
+        <h2 class="example-card-title">{{example.title}}</h2>
+        <p class="example-card-content">
+          {{example.intro}}
+        </p>
+        <span class="example-card-details">
+          DETAILS
+        </span>
+      </a>
+    </router-link>
+  </ul>
 </div >
