--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,13 +1,13 @@
 // Colors
 $black: #222222;
 $dark-grey: #454545;
+$lighter-grey: #717171;
 $white: #FFFFFF;
 $theme-blue: #334285;
 $gold-yellow: #f3b641;
 $alt-blue: #007fae;
 
 $grayed-black: #292929;
-$gold-yellow: #f3b641;
 $bright-yellow: #ffd722;
 $lightgrey: #F3F3F3;
 $grey: grey;
@@ -49,6 +49,7 @@ $base-line-height: 1.5;
 
 $base-bg-color: $white;
 $base-font-color: $dark-grey;
+$base-font-color-light: $lighter-grey;
 
 $header-bg-color: $grayed-black;
 
